--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isotope-layout": "^3.0.6",
     "next": "^14.2.13",
     "react": "^18",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
     "react-modal-video": "^2.0.1",
